--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -201,7 +201,7 @@
         //登入时载入
         function loading() {
             if(welcomeName){
-                welcomeName.textContent = "欢迎您," + username + ;
+                welcomeName.textContent = "欢迎您," + username;
             }
             var position = searchName(username);
             var tempStr = localStorage.getItem('obj').split('*');
